--- a/00-base-concepts/window-opener-demo/parent.html
+++ b/00-base-concepts/window-opener-demo/parent.html
@@ -4,10 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="icon" href="../assets/favicon/favicon.ico">
+  <link rel="apple-touch-icon" href="../assets/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="../assets/manifest.json">
+
   <title>Window Opener Demo // Parent Window</title>
 
-  <link rel="stylesheet" href="../styles/reset.css">
-  <link rel="stylesheet" href="../styles/base.css">
+  <link rel="stylesheet" href="../assets/styles/reset.css">
+  <link rel="stylesheet" href="../assets/styles/base.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/default.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
@@ -63,7 +68,7 @@
     }
 
     trackMyWindowPosition();
-    const obverveMyWindowPosition = setInterval(trackMyWindowPosition, 500);
+    const observeMyWindowPosition = setInterval(trackMyWindowPosition, 500);
 
 
     // Observe the child window position
