--- a/00-base-concepts/local-storage-demo/index.html
+++ b/00-base-concepts/local-storage-demo/index.html
@@ -4,17 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="icon" href="../assets/favicon/favicon.ico">
+  <link rel="apple-touch-icon" href="../assets/favicon/apple-touch-icon.png">
+  <link rel="manifest" href="../assets/manifest.json">
+
   <title>LocalStorage Demo</title>
 
-  <link rel="stylesheet" href="../styles/reset.css">
-  <link rel="stylesheet" href="../styles/base.css">
+  <link rel="stylesheet" href="../assets/styles/reset.css">
+  <link rel="stylesheet" href="../assets/styles/base.css">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/default.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>
   <script>hljs.highlightAll(); hljs.initLineNumbersOnLoad();</script>
   <script src="https://cdn.jsdelivr.net/npm/markdown-it@14.1.0/dist/markdown-it.min.js"></script>
-  <script src="../scripts/addMarkdownSupport.js"></script>
+  <script src="../assets/scripts/helper.js"></script>
 </head>
 
 <body>
@@ -70,7 +75,7 @@
 
     // Observe my window position
     trackMyWindowPosition();
-    const obverveMyWindowPosition = setInterval(trackMyWindowPosition, 500);
+    const observeMyWindowPosition = setInterval(trackMyWindowPosition, 500);
 
     // Receive messages from the channel
     // ########################################################################
