--- a/00-base-concepts/window-opener-demo/child.html
+++ b/00-base-concepts/window-opener-demo/child.html
@@ -15,9 +15,8 @@
   <link rel="stylesheet" href="../assets/styles/base.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/default.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>
-  <script>hljs.highlightAll(); hljs.initLineNumbersOnLoad();</script>
+  <script src="../assets/libs/highlight.min.js"></script>
+  <script src="../assets/libs/highlightjs-line-numbers.min.js"></script>
 
 </head>
 
@@ -114,6 +113,9 @@
 
     const targetElement = document.querySelector('[data-js-code-example]');
     targetElement.appendChild(pre);
+
+    hljs.highlightAll();
+    hljs.initLineNumbersOnLoad();
   </script>
 </body>
 
