--- a/00-base-concepts/post-message-demo/index.html
+++ b/00-base-concepts/post-message-demo/index.html
@@ -14,10 +14,9 @@
   <link rel="stylesheet" href="../assets/styles/reset.css">
   <link rel="stylesheet" href="../assets/styles/base.css">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/github.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>
-  <script>hljs.highlightAll(); hljs.initLineNumbersOnLoad();</script>
+  <link rel="stylesheet" href="../assets/libs/github.min.css">
+  <script src="../assets/libs/highlight.min.js"></script>
+  <script src="../assets/libs/highlightjs-line-numbers.min.js"></script>
 
 </head>
 
@@ -99,6 +98,9 @@
 
     const targetElement = document.querySelector('[data-js-code-example]');
     targetElement.appendChild(pre);
+
+    hljs.highlightAll();
+    hljs.initLineNumbersOnLoad();
   </script>
 
 </body>
