--- a/00-base-concepts/window-opener-demo/parent.html
+++ b/00-base-concepts/window-opener-demo/parent.html
@@ -15,10 +15,8 @@
   <link rel="stylesheet" href="../assets/styles/base.css">
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/styles/default.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.11.1/highlight.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/highlightjs-line-numbers.js/dist/highlightjs-line-numbers.min.js"></script>
-  <script>hljs.highlightAll(); hljs.initLineNumbersOnLoad();</script>
-
+  <script src="../assets/libs/highlight.min.js"></script>
+  <script src="../assets/libs/highlightjs-line-numbers.min.js"></script>
 </head>
 
 <body>
@@ -126,8 +124,10 @@
         const url = clickedElement.getAttribute('data-js-open-window');
         childWindow = window.open(url, 'child-window', 'width=600,height=400');
       }
-
     });
+
+    hljs.highlightAll();
+    hljs.initLineNumbersOnLoad();
   </script>
 </body>
 
