--- a/00-core-concepts/multiple-window-data-shared-worker/index.html
+++ b/00-core-concepts/multiple-window-data-shared-worker/index.html
@@ -39,7 +39,7 @@
   <main>
     <section>
       <h2>Structure</h2>
-      <table>
+      <table class="is-simple">
         <thead>
           <tr>
             <th>Component</th>
