--- a/01-tools-of-the-trade-for-visualisation/index.html
+++ b/01-tools-of-the-trade-for-visualisation/index.html
@@ -27,7 +27,7 @@
 
 <body>
   <header>
-    <h1>Tools of the trade for visualisation</h1>
+    <h1>Working with p5.js</h1>
 
     <div class="hero-text" data-js-markdownit="">**[p5.js](https://p5js.org/)** is an open-source JavaScript library
       that brings the core principles of creative coding to the web. It was initiated in 2013 by [Lauren
@@ -51,12 +51,6 @@
       critique.
     </div>
 
-    <section>
-      <h2>Table of Contents</h2>
-      <ul>
-        <li><a href="#reas-and-fry">About Casey Reas and Ben Fry</a></li>
-      </ul>
-    </section>
 
     <div data-js-markdownit class="section" id="reas-and-fry">
       ### Casey Reas // [https://reas.com](https://reas.com)
