--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
   </section>
 
   <section id="tools-of-the-trade-for-visualisation" class="collapsible">
-    <h2>Tools of the trade for visualisation</h2>
+    <h2>Working with p5.js</h2>
     <div class="content">
       <p data-js-markdownit>This section provides an introduction to [p5.js](https://p5js.org), a JavaScript library for
         creative coding. It covers the basic structure of a [p5.js](https://p5js.org) sketch, including setup and draw
         functions, and demonstrates how to create simple shapes and animations. The goal is to familiarize you with the
         [p5.js](https://p5js.org) environment and its capabilities for visualizing data.</p>
-      <a class="button mv-xl" href="01-tools-of-the-trade-for-visualisation/index.html">More about p5.js Basics</a>
+      <a class="button mv-xl" href="01-tools-of-the-trade-for-visualisation/index.html">More about p5.js</a>
     </div>
   </section>
 
