--- a/00-core-concepts/post-message-demo/index.html
+++ b/00-core-concepts/post-message-demo/index.html
@@ -11,8 +11,8 @@
 
   <title>Post Message Demo // Broadcast Channel API</title>
 
-  <link rel="stylesheet" href="../../shared/assets/styles/reset.css">
-  <link rel="stylesheet" href="../../shared/assets/styles/base.css">
+  <link rel="stylesheet" href="../../shared/assets/styles/combined.css">
+
 
   <link rel="stylesheet" href="../../shared/assets/libs/github.min.css">
   <script src="../../shared/assets/libs/highlight.min.js"></script>
@@ -23,7 +23,8 @@
 
 <body>
   <header>
-    <h1>Post Message Demo</h1>
+    <a href="../../"><i class="icon">home</i></a>
+    <h1>Broadcast Channel API & Post Message Demo</h1>
     <h2 class="subtitle">I'm a new Window</h2>
     <p class="hero-text" data-js-markdownit>The Post Message feature uses the <a href="https://developer.mozilla.org/en-US/docs/Web/API/Broadcast_Channel_API">Broadcast Channel API</a> to share messages between Windows, Tabs or iFrames that are served from the same origin.</p>
     <a class="button mv-xl"  href="index.html" target="_blank">Open New Window</a>
