--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
   <title>Basic concepts of sharing data between browser windows</title>
 
-  <link rel="stylesheet" href="shared/assets/styles/reset.css">
-  <link rel="stylesheet" href="shared/assets/styles/base.css">
+  <link rel="stylesheet" href="shared/assets/styles/combined.css">
 
   <script src="shared/assets/libs/markdown-it.min.js"></script>
   <script src="shared/assets/scripts/helper.js"></script>
@@ -26,10 +25,14 @@
 
 <body>
   <header>
+    <a href="./"><i class="icon">home</i></a>
     <h1>Multi-Window Experiences with p5.js</h1>
 
-    <p class="hero-text">Research question:<br>How do I share real-time data between two browser windows and use it for
+    <div class="hero-text mv-fluid-xl pt-xl">
+      <p class="is-small">Research question:</p>
+      <p class="is-important">How do I share real-time data between two browser windows and use it for
       a visualisation with p5.js?</p>
+    </div>
   </header>
 
   <section id="core-concepts" class="collapsible">
