--- a/00-core-concepts/local-storage-demo/index.html
+++ b/00-core-concepts/local-storage-demo/index.html
@@ -11,8 +11,7 @@
 
   <title>LocalStorage Demo</title>
 
-  <link rel="stylesheet" href="../../shared/assets/styles/reset.css">
-  <link rel="stylesheet" href="../../shared/assets/styles/base.css">
+  <link rel="stylesheet" href="../../shared/assets/styles/combined.css">
 
   <link rel="stylesheet" href="../../shared/assets/libs/github.min.css">
   <script src="../../shared/assets/libs/highlight.min.js"></script>
@@ -23,6 +22,7 @@
 
 <body>
   <header>
+    <a href="../../"><i class="icon">home</i></a>
     <h1>Local Storage Demo</h1>
     <h2 class="subtitle">I'm a new Window</h2>
   
@@ -31,9 +31,9 @@
     <a class="button mv-xl"  href="index.html" target="_blank">Open New Window</a>
   </header>
 
-  <section>
+  <div class="section">
     <div data-js-code-example></div>
-  </section>
+  </div>
 
   <footer class="has-grid">
     <div>
