--- a/00-core-concepts/shared-worker-demo/index.html
+++ b/00-core-concepts/shared-worker-demo/index.html
@@ -11,8 +11,8 @@
 
   <title>SharedWorker Demo</title>
 
-  <link rel="stylesheet" href="../../shared/assets/styles/reset.css">
-  <link rel="stylesheet" href="../../shared/assets/styles/base.css">
+  <link rel="stylesheet" href="../../shared/assets/styles/combined.css">
+
 
   <link rel="stylesheet" href="../../shared/assets/libs/github.min.css">
   <script src="../../shared/assets/libs/highlight.min.js"></script>
@@ -23,6 +23,7 @@
 
 <body>
   <header>
+    <a href="../../"><i class="icon">home</i></a>
     <h1>Shared Worker Demo</h1>
     <h2 class="subtitle">I'm a new Window</h2>
   
