--- a/00-core-concepts/window-opener-demo/parent.html
+++ b/00-core-concepts/window-opener-demo/parent.html
@@ -11,8 +11,8 @@
 
   <title>Window Opener Demo // Parent Window</title>
 
-  <link rel="stylesheet" href="../../shared/assets/styles/reset.css">
-  <link rel="stylesheet" href="../../shared/assets/styles/base.css">
+  <link rel="stylesheet" href="../../shared/assets/styles/combined.css">
+
 
   <link rel="stylesheet" href="../../shared/assets/libs/github.min.css">
   <script src="../../shared/assets/libs/highlight.min.js"></script>
@@ -23,6 +23,7 @@
 
 <body>
   <header>
+    <a href="../../"><i class="icon">home</i></a>
     <h1>Window Opener Demo</h1>
     <h2 class="subtitle">I'm the Parent Window</h2>
     <p class="hero-text" data-js-markdownit>In this example, we will explore how to share data between different browser windows.</p>
